force-app/main/default/objects/Case/fields/Arabic_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arabic Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>