force-app/main/default/objects/Case/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severity 0</fullName>
            </value>
            <value>
                <fullName>Severity 1</fullName>
            </value>
            <value>
                <fullName>Severity 2</fullName>
            </value>
            <value>
                <fullName>Severity 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>