force-app/main/default/objects/Case/fields/test_builder__c.field-meta.xml
<CustomField>
    <fullName>test_builder__c</fullName>
    <label>test builder</label>
    <length>20</length>
    <type>Text</type>
</CustomField>