force-app/main/default/objects/Case/validationRules/Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Escalated&quot;),
  ISBLANK(Reason_for_Escalating__c)
)</errorConditionFormula>
    <errorMessage>Any Reason</errorMessage>
</ValidationRule>