force-app/main/default/objects/Case/listViews/Support_Leads_Case.listView-meta.xml
<ListView>
    <fullName>Support_Leads_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Leads</label>
    <queue>Support_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>